--- a/scss/style.css
+++ b/scss/style.css
@@ -18,9 +18,6 @@ body {
       padding: 5px 0 0 0;
       z-index: 10; }
       body .wrapper header .container {
-        margin: 0 auto;
-        padding: 0 15px;
-        box-sizing: content-box;
         max-height: 104px;
         display: flex;
         align-items: center; }
@@ -72,52 +69,48 @@ body {
       flex: 1 1 auto; }
       body .wrapper .page .page_main-block {
         position: relative; }
-        body .wrapper .page .page_main-block .container {
-          margin: 0 auto;
-          padding: 0 15px;
-          box-sizing: content-box; }
-          body .wrapper .page .page_main-block .container .main__body {
-            padding: 154px 0 191px 0;
-            position: relative;
-            z-index: 2;
-            max-width: 390px; }
-            body .wrapper .page .page_main-block .container .main__body h1 {
-              font-size: 58px;
-              line-height: 120%;
-              font-weight: 800; }
-            body .wrapper .page .page_main-block .container .main__body .main__block-text {
-              font-size: 20px;
-              line-height: 30px;
-              color: #737373; }
-            body .wrapper .page .page_main-block .container .main__body .main__block-buttons {
-              display: flex; }
-              body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button {
-                text-decoration: none;
-                padding: 10px 36px;
-                background-color: #FF7B47;
-                border: 1px solid #FF7B47;
-                border-radius: 36px;
-                color: #fff;
-                font-size: 14px;
-                line-height: 28px;
-                transition: all 0.7s ease;
-                display: flex;
-                align-items: center;
-                justify-content: center; }
-              body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button:hover {
-                background-color: transparent;
-                color: #FF7B47; }
-              body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button-border {
-                color: #0D5C63;
-                border: 1px solid #0D5C63;
-                background-color: transparent; }
-              body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button-border:hover {
-                background-color: #0D5C63;
-                color: #fff; }
-              body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button:not(:last-child) {
-                margin: 0 10px 0 0; }
-          body .wrapper .page .page_main-block .container .main__body > *:not(:last-child) {
-            margin-bottom: 35px; }
+        body .wrapper .page .page_main-block .container .main__body {
+          padding: 154px 0 191px 0;
+          position: relative;
+          z-index: 2;
+          max-width: 390px; }
+          body .wrapper .page .page_main-block .container .main__body h1 {
+            font-size: 58px;
+            line-height: 120%;
+            font-weight: 800; }
+          body .wrapper .page .page_main-block .container .main__body .main__block-text {
+            font-size: 20px;
+            line-height: 30px;
+            color: #737373; }
+          body .wrapper .page .page_main-block .container .main__body .main__block-buttons {
+            display: flex; }
+            body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button {
+              text-decoration: none;
+              padding: 10px 36px;
+              background-color: #FF7B47;
+              border: 1px solid #FF7B47;
+              border-radius: 36px;
+              color: #fff;
+              font-size: 14px;
+              line-height: 28px;
+              transition: all 0.7s ease;
+              display: flex;
+              align-items: center;
+              justify-content: center; }
+            body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button:hover {
+              background-color: transparent;
+              color: #FF7B47; }
+            body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button-border {
+              color: #0D5C63;
+              border: 1px solid #0D5C63;
+              background-color: transparent; }
+            body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button-border:hover {
+              background-color: #0D5C63;
+              color: #fff; }
+            body .wrapper .page .page_main-block .container .main__body .main__block-buttons .main__button:not(:last-child) {
+              margin: 0 10px 0 0; }
+        body .wrapper .page .page_main-block .container .main__body > *:not(:last-child) {
+          margin-bottom: 35px; }
         body .wrapper .page .page_main-block .ibg {
           position: absolute;
           width: 100%;
@@ -131,18 +124,57 @@ body {
             top: 0;
             left: 0;
             object-fit: cover; }
+      body .wrapper .page .page__services {
+        position: relative;
+        z-index: 2;
+        margin: -111px 0 0 0; }
+        body .wrapper .page .page__services .services__container .services__body {
+          margin: 0 -15px;
+          display: flex; }
+          body .wrapper .page .page__services .services__container .services__body .services__column {
+            padding: 0 15px;
+            flex: 0 1 33.33%; }
+            body .wrapper .page .page__services .services__container .services__body .services__column .services__item {
+              box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+              padding: 35px 40px;
+              background: #FFFFFF;
+              display: flex;
+              flex-direction: column; }
+              body .wrapper .page .page__services .services__container .services__body .services__column .services__item .item__service_title {
+                font-size: 24px;
+                font-weight: 700;
+                line-height: 133%; }
+              body .wrapper .page .page__services .services__container .services__body .services__column .services__item .item__service_text {
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 20px; }
+            body .wrapper .page .page__services .services__container .services__body .services__column .services__item-green {
+              background-color: #0D5C63;
+              color: #fff; }
 
 @media (min-width: 576px) {
   .container {
-    max-width: 540px; } }
+    max-width: 540px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box; } }
 @media (min-width: 768px) {
   .container {
-    max-width: 720px; } }
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box; } }
 @media (min-width: 992px) {
   .container {
-    max-width: 960px; } }
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box; } }
 @media (min-width: 1200px) {
   .container {
-    max-width: 1046px; } }
+    max-width: 1046px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box; } }
 
 /*# sourceMappingURL=style.css.map */
