--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -11,3 +11,28 @@
     color: #737373;
     text-decoration: none;
 }
+@mixin card{
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+    padding: 30px 35px;
+    background: #FFFFFF;
+    transition: all 0.7s ease;
+}
+@mixin header{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 57px;
+    text-align: center;
+}
+@mixin subtitle{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: center;
+    color: $small__text;
+}
+@mixin card__text{
+    // width: fit-content;
+    margin: 0 auto;
+    text-align: center;
+    // font-size: $font;
+}
