--- a/scss/style.css
+++ b/scss/style.css
@@ -5,7 +5,8 @@ body {
   position: relative;
   color: #252B42;
   font-size: 14px;
-  font-weight: 500; }
+  font-weight: 500;
+  background-color: #fafafa; }
   body .wrapper {
     display: flex;
     flex-direction: column;
@@ -136,8 +137,9 @@ body {
             flex: 0 1 33.33%; }
             body .wrapper .page .page__services .services__container .services__body .services__column .services__item {
               box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
-              padding: 35px 40px;
+              padding: 30px 35px;
               background: #FFFFFF;
+              transition: all 0.7s ease;
               display: flex;
               flex-direction: column; }
               body .wrapper .page .page__services .services__container .services__body .services__column .services__item .item__service_title {
@@ -147,10 +149,57 @@ body {
               body .wrapper .page .page__services .services__container .services__body .services__column .services__item .item__service_text {
                 font-weight: 500;
                 font-size: 14px;
-                line-height: 20px; }
-            body .wrapper .page .page__services .services__container .services__body .services__column .services__item-green {
+                line-height: 20px;
+                color: #737373; }
+            body .wrapper .page .page__services .services__container .services__body .services__column .services__item:hover {
               background-color: #0D5C63;
               color: #fff; }
+              body .wrapper .page .page__services .services__container .services__body .services__column .services__item:hover .item__service_text {
+                color: #fff; }
+              body .wrapper .page .page__services .services__container .services__body .services__column .services__item:hover .icon__svg {
+                fill: #fff; }
+      body .wrapper .page .advantages .advantages__container {
+        padding: 80px 0; }
+        body .wrapper .page .advantages .advantages__container .advantages__header .header__title {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 57px;
+          text-align: center; }
+        body .wrapper .page .advantages .advantages__container .advantages__header .header__text {
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          text-align: center;
+          color: #737373;
+          margin: 10px auto 50px;
+          max-width: 511px; }
+        body .wrapper .page .advantages .advantages__container .advantages__body {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+          grid-gap: 30px; }
+          body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item {
+            display: grid;
+            grid-template-rows: repeat(3, 1fr);
+            box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+            padding: 30px 35px;
+            background: #FFFFFF;
+            transition: all 0.7s ease; }
+            body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item .advantages__icon {
+              margin: 0 auto;
+              text-align: center;
+              min-height: 50px;
+              display: flex;
+              justify-content: flex-end; }
+            body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item .advantages__title {
+              margin: 10px auto !important;
+              margin: 0 auto;
+              text-align: center;
+              font-size: 40px; }
+            body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item .advantages__text {
+              margin: 0 auto;
+              text-align: center;
+              font-size: 16px;
+              color: #737373; }
 
 @media (min-width: 576px) {
   .container {
