--- a/scss/style.css
+++ b/scss/style.css
@@ -181,6 +181,7 @@ body {
           body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item {
             display: grid;
             grid-template-rows: repeat(3, 1fr);
+            align-items: center;
             box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
             padding: 30px 35px;
             background: #FFFFFF;
@@ -189,8 +190,8 @@ body {
               margin: 0 auto;
               text-align: center;
               min-height: 50px;
-              display: flex;
-              justify-content: flex-end; }
+              display: grid;
+              align-items: end; }
             body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item .advantages__title {
               margin: 10px auto !important;
               margin: 0 auto;
